src/compiler/snapshots/isa__compiler__lexer__tests__keyword.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"_\").next()"
---
Some(
    Ok(
        Spand {
            data: Underscore,
            span: SpanData { file_id: 0, start: 0, end: 1 },
        },
    ),
)
