src/compiler/snapshots/isa__compiler__lexer__tests__let_stmts-5.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"let mengo _ _c _ = true;\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: KwLet,
            span: SpanData { file_id: 0, lo: 0, hi: 3 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "mengo",
            ),
            span: SpanData { file_id: 0, lo: 4, hi: 9 },
        },
    ),
    Ok(
        Spand {
            data: Underscore,
            span: SpanData { file_id: 0, lo: 10, hi: 11 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "_c",
            ),
            span: SpanData { file_id: 0, lo: 12, hi: 14 },
        },
    ),
    Ok(
        Spand {
            data: Underscore,
            span: SpanData { file_id: 0, lo: 15, hi: 16 },
        },
    ),
    Ok(
        Spand {
            data: Eq,
            span: SpanData { file_id: 0, lo: 17, hi: 18 },
        },
    ),
    Ok(
        Spand {
            data: KwTrue,
            span: SpanData { file_id: 0, lo: 19, hi: 23 },
        },
    ),
    Ok(
        Spand {
            data: Semicolon,
            span: SpanData { file_id: 0, lo: 23, hi: 24 },
        },
    ),
]
