src/compiler/snapshots/isa__compiler__lexer__tests__lets.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"let a = 10 in 10\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: KwLet,
            span: SpanData { file_id: 0, lo: 0, hi: 3 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "a",
            ),
            span: SpanData { file_id: 0, lo: 4, hi: 5 },
        },
    ),
    Ok(
        Spand {
            data: Eq,
            span: SpanData { file_id: 0, lo: 6, hi: 7 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                10,
            ),
            span: SpanData { file_id: 0, lo: 8, hi: 10 },
        },
    ),
    Ok(
        Spand {
            data: KwIn,
            span: SpanData { file_id: 0, lo: 11, hi: 13 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                10,
            ),
            span: SpanData { file_id: 0, lo: 14, hi: 16 },
        },
    ),
]
