src/compiler/snapshots/isa__compiler__lexer__tests__lists-2.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"[1,2,3]\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: LBracket,
            span: SpanData { file_id: 0, lo: 0, hi: 1 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                1,
            ),
            span: SpanData { file_id: 0, lo: 1, hi: 2 },
        },
    ),
    Ok(
        Spand {
            data: Comma,
            span: SpanData { file_id: 0, lo: 2, hi: 3 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                2,
            ),
            span: SpanData { file_id: 0, lo: 3, hi: 4 },
        },
    ),
    Ok(
        Spand {
            data: Comma,
            span: SpanData { file_id: 0, lo: 4, hi: 5 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                3,
            ),
            span: SpanData { file_id: 0, lo: 5, hi: 6 },
        },
    ),
    Ok(
        Spand {
            data: RBracket,
            span: SpanData { file_id: 0, lo: 6, hi: 7 },
        },
    ),
]
