src/compiler/snapshots/isa__compiler__lexer__tests__lists.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"[]\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: LBracket,
            span: SpanData { file_id: 0, lo: 0, hi: 1 },
        },
    ),
    Ok(
        Spand {
            data: RBracket,
            span: SpanData { file_id: 0, lo: 1, hi: 2 },
        },
    ),
]
