src/compiler/snapshots/isa__compiler__lexer__tests__matches-2.snap
---
source: src/compiler/lexer.rs
expression: "Lexer ::\nnew(0, \"match (1,2) with (0.., ..0) -> 10, (..0, 0..) -> -10\").collect :: <\nVec < _ >> ()"
---
[
    Ok(
        Spand {
            data: KwMatch,
            span: SpanData { file_id: 0, start: 0, end: 5 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, start: 6, end: 7 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                1,
            ),
            span: SpanData { file_id: 0, start: 7, end: 8 },
        },
    ),
    Ok(
        Spand {
            data: Comma,
            span: SpanData { file_id: 0, start: 8, end: 9 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                2,
            ),
            span: SpanData { file_id: 0, start: 9, end: 10 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, start: 10, end: 11 },
        },
    ),
    Ok(
        Spand {
            data: KwWith,
            span: SpanData { file_id: 0, start: 12, end: 16 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, start: 17, end: 18 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                0,
            ),
            span: SpanData { file_id: 0, start: 18, end: 19 },
        },
    ),
    Ok(
        Spand {
            data: DotDot,
            span: SpanData { file_id: 0, start: 19, end: 21 },
        },
    ),
    Ok(
        Spand {
            data: Comma,
            span: SpanData { file_id: 0, start: 21, end: 22 },
        },
    ),
    Ok(
        Spand {
            data: DotDot,
            span: SpanData { file_id: 0, start: 23, end: 25 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                0,
            ),
            span: SpanData { file_id: 0, start: 25, end: 26 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, start: 26, end: 27 },
        },
    ),
    Ok(
        Spand {
            data: Arrow,
            span: SpanData { file_id: 0, start: 28, end: 30 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                10,
            ),
            span: SpanData { file_id: 0, start: 31, end: 33 },
        },
    ),
    Ok(
        Spand {
            data: Comma,
            span: SpanData { file_id: 0, start: 33, end: 34 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, start: 35, end: 36 },
        },
    ),
    Ok(
        Spand {
            data: DotDot,
            span: SpanData { file_id: 0, start: 36, end: 38 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                0,
            ),
            span: SpanData { file_id: 0, start: 38, end: 39 },
        },
    ),
    Ok(
        Spand {
            data: Comma,
            span: SpanData { file_id: 0, start: 39, end: 40 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                0,
            ),
            span: SpanData { file_id: 0, start: 41, end: 42 },
        },
    ),
    Ok(
        Spand {
            data: DotDot,
            span: SpanData { file_id: 0, start: 42, end: 44 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, start: 44, end: 45 },
        },
    ),
    Ok(
        Spand {
            data: Arrow,
            span: SpanData { file_id: 0, start: 46, end: 48 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, start: 49, end: 50 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                10,
            ),
            span: SpanData { file_id: 0, start: 50, end: 52 },
        },
    ),
]
