src/compiler/snapshots/isa__compiler__lexer__tests__numbers-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"12\").next()"
---
Some(
    Ok(
        Spand {
            data: Integer(
                12,
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 2 },
        },
    ),
)
